--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP|Poppins&display=swap" rel="stylesheet">
     <script src="main.js" type="text/javascript"></script>
 </head>
-<body>
+<body onload="initialize()">
+    <div class="transitionCurtain curtainOpacityDissapear curtainZIndexDissapear" id="transitionCurtain"></div>
     <div class="main-container">
-        <h2 class="englishHi">Hi!</h2>
-        <h2 class="spanishHi">¡Hola!</h2>
-        <h2 class="japaneseHi">こんにちは</h2>
-        <p class="whoAmI">I'm Malena Lucero and I'm a developer looking for my first opportunity in IT. To learn more about me click on your language!</p>
+        <h2 class="englishHi dissapear" id="englishHi"><a href="#" onclick="transitionCurtain()">Hi!</a></h2>
+        <h2 class="spanishHi dissapear" id="spanishHi"><a href="#" onclick="transitionCurtain()">¡Hola!</a></h2>
+        <h2 class="japaneseHi dissapear" id="japaneseHi"><a href="#" onclick="transitionCurtain()">こんにちは</a></h2>
+        <p class="whoAmI dissapear" id="whoAmI">I'm Malena Lucero and I'm a developer looking for my first opportunity in IT. To learn more about me click on your language!</p>
     </div>
 </body>
 </html>
