--- a/mainPage.html
+++ b/mainPage.html
@@ -13,6 +13,10 @@
     <!--MAIN-->
     <div class="mainPage" id="mainPage">
         <div class="transitionCurtain opacityAppear show" id="transitionCurtain"></div>
+        <div class="diagonalContainer">
+            <div class="skewRight"></div>
+            <div class="skewLeft"></div>
+        </div>
         <div class="mainPageContent">
             <div class="leftColumn">
                 <!--PRESENTATION-->
