--- a/mainPage.html
+++ b/mainPage.html
@@ -13,15 +13,13 @@
     <!--MAIN-->
     <div class="mainPage" id="mainPage">
         <div class="transitionCurtain opacityAppear show" id="transitionCurtain"></div>
-        <div class="diagonalContainer">
-            <div class="skewRight"></div>
-            <div class="skewLeft"></div>
-        </div>
+        <div class="skewRight"></div>
+        <div class="skewLeft"></div>
         <div class="mainPageContent">
             <div class="leftColumn">
                 <!--PRESENTATION-->
                 <div class="presentation">
-                    <h1>Hi! I'm <span>Malena Lucero</span></h1>
+                    <h1>Hi! I'm Malena Lucero</h1>
                     <p>I'm a junior developer located in Buenos Aires, Argentina, looking for chances to grow in the field. I'm studying Systems at UBA, I have a bachelor's degree in English to Spanish translation and I know a bit of Japanese.</p>  
                     <p>I feel comfortable using React, Javascript, HTML, CSS, SASS, Nodejs, Express and MongoDB.</p>
                 </div>
@@ -38,6 +36,7 @@
             <div class="rightColumn">
                 <h3>Education</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quisquam! Est alias dignissimos provident vero beatae suscipit error minus modi fugit, corporis quam laboriosam nulla atque eius nobis a? Nobis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ullam recusandae deleniti laudantium culpa odit aspernatur ducimus sequi doloremque! Minima autem, quo ipsa laboriosam dolorum accusantium at optio hic nam.</p>
             </div> 
         </div>
     </div>
