--- a/mainPage.html
+++ b/mainPage.html
@@ -13,30 +13,39 @@
     <!--MAIN-->
     <div class="mainPage" id="mainPage">
         <div class="transitionCurtain opacityAppear show" id="transitionCurtain"></div>
-        <div class="skewRight"></div>
-        <div class="skewLeft"></div>
+        <div class="skewContainer">
+            <div class="skewRight"></div>
+            <div class="skewLeft"></div>
+        </div>
         <div class="mainPageContent">
             <div class="leftColumn">
-                <!--PRESENTATION-->
-                <div class="presentation">
-                    <h1>Hi! I'm Malena Lucero</h1>
-                    <p>I'm a junior developer located in Buenos Aires, Argentina, looking for chances to grow in the field. I'm studying Systems at UBA, I have a bachelor's degree in English to Spanish translation and I know a bit of Japanese.</p>  
-                    <p>I feel comfortable using React, Javascript, HTML, CSS, SASS, Nodejs, Express and MongoDB.</p>
+                <div class="fixedColumn">
+                   <!--PRESENTATION-->
+                    <div class="presentation">
+                        <h1>Hi! I'm Malena Lucero</h1>
+                        <p>I'm a junior developer located in Buenos Aires, Argentina, looking for chances to grow in the field. I'm studying Systems at UBA, I have a bachelor's degree in English to Spanish translation and I know a bit of Japanese.</p>  
+                        <p>I feel comfortable using React, Javascript, HTML, CSS, SASS, Nodejs, Express and MongoDB.</p>
+                    </div>
+                    <!--MENU-->
+                    <ul id="menu" class="menu">
+                        <li><a href="#" onclick="portfolio()">PORTFOLIO</a></li>
+                        <li><a href="#" onclick="technologies()">TECHNOLOGIES</a></li>
+                        <li><a href="#" onclick="education()">EDUCATION</a></li>
+                        <li><a href="#" onclick="languages()">LANGUAGES</a></li>
+                        <li><a href="#" onclick="contact()">CONTACT</a></li>
+                        <li><a href="#">DOWNLOAD RESUME</a></li>
+                    </ul> 
                 </div>
-                <!--MENU-->
-                <ul id="menu" class="menu">
-                    <li><a href="#" onclick="portfolio()">PORTFOLIO</a></li>
-                    <li><a href="#" onclick="technologies()">TECHNOLOGIES</a></li>
-                    <li><a href="#" onclick="education()">EDUCATION</a></li>
-                    <li><a href="#" onclick="languages()">LANGUAGES</a></li>
-                    <li><a href="#" onclick="contact()">CONTACT</a></li>
-                    <li><a href="#">DOWNLOAD RESUME</a></li>
-                </ul>
             </div>
             <div class="rightColumn">
                 <h3>Education</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quisquam! Est alias dignissimos provident vero beatae suscipit error minus modi fugit, corporis quam laboriosam nulla atque eius nobis a? Nobis.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ullam recusandae deleniti laudantium culpa odit aspernatur ducimus sequi doloremque! Minima autem, quo ipsa laboriosam dolorum accusantium at optio hic nam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam atque ipsa illo culpa voluptatem doloremque dicta, nostrum iure facere vero, veniam sed amet eaque nisi magnam ratione distinctio omnis laborum!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed debitis et autem, doloremque iste amet magni necessitatibus porro harum ex maxime rem adipisci. Asperiores deleniti quae, ullam quia quod modi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque facilis voluptatem? Iusto commodi harum quo autem, sunt id cum quasi itaque fuga nesciunt perspiciatis. Ex aspernatur placeat omnis optio!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eos fugit, reprehenderit nihil, in soluta, illo modi iusto fugiat necessitatibus velit perspiciatis vero quidem nesciunt minima veniam? Minus, laborum quasi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt non laudantium nisi expedita hic ut, ad repellat omnis atque, veritatis nihil numquam praesentium doloremque voluptatibus? Facere unde repellendus sapiente accusamus.</p>
             </div> 
         </div>
     </div>
