--- a/mainPage.html
+++ b/mainPage.html
@@ -19,7 +19,7 @@
         </div>
         <div class="mainPageContent">
             <div class="leftColumn">
-                <div class="fixedColumn">
+                <div class="leftColumnContent">
                    <!--PRESENTATION-->
                     <div class="presentation">
                         <h1>Hi! I'm Malena Lucero</h1>
@@ -28,24 +28,22 @@
                     </div>
                     <!--MENU-->
                     <ul id="menu" class="menu">
-                        <li><a href="#" onclick="portfolio()">PORTFOLIO</a></li>
-                        <li><a href="#" onclick="technologies()">TECHNOLOGIES</a></li>
-                        <li><a href="#" onclick="education()">EDUCATION</a></li>
-                        <li><a href="#" onclick="languages()">LANGUAGES</a></li>
-                        <li><a href="#" onclick="contact()">CONTACT</a></li>
-                        <li><a href="#">DOWNLOAD RESUME</a></li>
+                        <li><a href="#" onclick="showSection('porfolio')">PORTFOLIO</a></li>
+                        <li><a href="#" onclick="showSection('technologies')">TECHNOLOGIES</a></li>
+                        <li><a href="#" onclick="showSection('education')">EDUCATION</a></li>
+                        <li><a href="#" onclick="showSection('languages')">LANGUAGES</a></li>
+                        <li><a href="#" onclick="showSection('contact')">CONTACT</a></li>
+                        <li><a href="#" onclick="showSection('download')">DOWNLOAD RESUME</a></li>
                     </ul> 
                 </div>
             </div>
             <div class="rightColumn">
-                <h3>Education</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quisquam! Est alias dignissimos provident vero beatae suscipit error minus modi fugit, corporis quam laboriosam nulla atque eius nobis a? Nobis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ullam recusandae deleniti laudantium culpa odit aspernatur ducimus sequi doloremque! Minima autem, quo ipsa laboriosam dolorum accusantium at optio hic nam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam atque ipsa illo culpa voluptatem doloremque dicta, nostrum iure facere vero, veniam sed amet eaque nisi magnam ratione distinctio omnis laborum!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed debitis et autem, doloremque iste amet magni necessitatibus porro harum ex maxime rem adipisci. Asperiores deleniti quae, ullam quia quod modi.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus doloremque facilis voluptatem? Iusto commodi harum quo autem, sunt id cum quasi itaque fuga nesciunt perspiciatis. Ex aspernatur placeat omnis optio!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eos fugit, reprehenderit nihil, in soluta, illo modi iusto fugiat necessitatibus velit perspiciatis vero quidem nesciunt minima veniam? Minus, laborum quasi!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt non laudantium nisi expedita hic ut, ad repellat omnis atque, veritatis nihil numquam praesentium doloremque voluptatibus? Facere unde repellendus sapiente accusamus.</p>
+                <section id="portfolioSection">P</section>
+                <section id="technologiesSection">T</section>
+                <section id="educationSection">E</section>
+                <section id="languagesSection">L</section>
+                <section id="contactSection">C</section>
+                <section id="downloadSection">D</section>
             </div> 
         </div>
     </div>
