--- a/mainPage.html
+++ b/mainPage.html
@@ -28,7 +28,7 @@
                     </div>
                     <!--MENU-->
                     <ul id="menu" class="menu">
-                        <li><a href="#" onclick="showSection('porfolio')">PORTFOLIO</a></li>
+                        <li><a href="#" onclick="showSection('portfolio')">PORTFOLIO</a></li>
                         <li><a href="#" onclick="showSection('technologies')">TECHNOLOGIES</a></li>
                         <li><a href="#" onclick="showSection('education')">EDUCATION</a></li>
                         <li><a href="#" onclick="showSection('languages')">LANGUAGES</a></li>
@@ -38,12 +38,30 @@
                 </div>
             </div>
             <div class="rightColumn">
-                <section id="portfolioSection">P</section>
-                <section id="technologiesSection">T</section>
-                <section id="educationSection">E</section>
-                <section id="languagesSection">L</section>
-                <section id="contactSection">C</section>
-                <section id="downloadSection">D</section>
+                <section id="portfolioSection" class="show">
+                    <h2>PORTFOLIO</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
+                <section id="technologiesSection" class="show">
+                    <h2>TECHNOLOGIES</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
+                <section id="educationSection" class="show">
+                    <h2>EDUCATION</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
+                <section id="languagesSection" class="show">
+                    <h2>LANGUAGES</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
+                <section id="contactSection" class="show">
+                    <h2>CONTACT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
+                <section id="downloadSection" class="show">
+                    <h2>DOWNLOAD</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tenetur perspiciatis minus nisi est? Facilis minus atque accusamus necessitatibus laudantium quasi impedit cum aliquid explicabo, officiis iusto, nihil magnam id?</p>
+                </section>
             </div> 
         </div>
     </div>
